# doggy

./: .gitignore  build.py  bundle-lock.json  bundle.json  select_product.json  subsystems_product.json
.github/workflows/: ci.yml
applications/BearPi/BearPi-HM_Nano/sample/: BUILD.gn
applications/BearPi/BearPi-HM_Nano/sample/doggy/: BUILD.gn  box.cpp  doggy.c  mpu6050.c  mpu6050.h  mpu6050_adapter.c  mpu6050_adapter.h  mpu6050_type.h  sound.c  sound.h  st7735_adapter.c  st7735_adapter.h  st7735_test.c  st7735s.h
ohos_bundles/@bearpi/bearpi_hm_nano/: README.md  bundle.json
ohos_bundles/@bearpi/bearpi_hm_nano/dist_scripts/: select_product.js
ohos_bundles/@bearpi/bearpi_hm_nano_sample_app/: README.md  bundle.json
ohos_bundles/@bearpi/hm_nano_build/: README.md
ohos_bundles/@bearpi/hm_nano_hi3861/: .sconsign.dblite  BUILD.gn
ohos_bundles/@bearpi/hm_nano_hi3861/app/demo/src/: app_demo_spi.c  app_main.c
ohos_bundles/@bearpi/hm_nano_hi3861/platform/os/Huawei_LiteOS/components/lib/libc/musl/include/bits/: alltypes.h
ohos_bundles/@bearpi/hm_nano_hi3861/platform/os/Huawei_LiteOS/targets/hi3861v100/include/: target_config.h
ohos_bundles/@ohos/gcc_riscv32/: README.md  bundle.json
ohos_bundles/@ohos/gcc_riscv32/scripts/: install.sh  uninstall.sh
ohos_bundles/@ohos/gn/: bundle.json
ohos_bundles/@ohos/gn/scripts/: install.sh
ohos_bundles/@ohos/ninja/: README.md  bundle.json  readme.md
ohos_bundles/@ohos/ninja/scripts/: install.sh  uninstall.sh
test/xdevice/src/xdevice.egg-info/: PKG-INFO
