# Copyright (c) 2020 Nanjing Xiaoxiongpai Intelligent Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


static_library("doggy") {
    sources = [
        "doggy.c",
        "st7735s.c",
        "st7735_adapter.c",
        "mpu6050.c",
        "mpu6050_adapter.c",
        "box.cpp"
    ]
    # cflags = [ "-Wno-unused-variable" ]
    # cflags += [ "-Wno-unused-but-set-variable" ]
    # cflags += [ "-Wno-unused-parameter" ]


   
    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        ".",
    ]
}

